# py2Dmol

./: .gitignore  .pre-commit-config.yaml  CNAME  DIMENSION_ANALYSIS.md  DIMENSION_QUICK_REFERENCE.md  DIMENSION_VISUAL_LAYOUT.md  MAIN_README.md  MSA_README.md  README.md  SELECTION_REFACTOR_PLAN.md  TECHNICAL_DOCUMENTATION.md  USalign  USalign.cpp  Untitled.ipynb  WEB_README.md  implementation_plan.md  index-web.html  index.html  msa.html  py2Dmol_demo.ipynb  py2Dmol_demo_2.ipynb  py2Dmol_simple_demo.ipynb  py3dmol.py  pyproject.toml  quick_overview.md  setup.py  sup.pml  sup_all.pml  sup_all_atm.pml  sup_all_atm_lig.pml  sup_atm.pml  technical_readme.md  test_3_viewers.py  test_multi_viewer_orient.py  test_multiple_pdb.py  test_orient_button.py  test_python_bonds.py  test_switch_bug.py
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: QUICKSTART.md  README.md
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  usage.rst
example/: example.ipynb
examples/: 6VZ6.cif  rfdiffusion.ipynb  test_chem_comp_bond.cif  test_ligand.cif
examples/afdb/: AF-P0A8I3-F1-model_v6.cif  AF-P0A8I3-F1-predicted_aligned_error_v6.json
py2Dmol/: __init__.py  grid.py  setup.py  viewer.py
py2Dmol/resources/: msa.html  pseudo_3D_viewer.html  py2Dmol-web.js  py2Dmol.js  py2Dmol_viewer.html  viewer-mol.js  viewer-mol.js.bak  viewer-mol.min.js  viewer-msa.js  viewer-msa.min.js  viewer-pae.js  viewer-pae.min.js  viewer-scatter.js  viewer-scatter.min.js  viewer-seq.js  viewer-seq.min.js  viewer.html  viewer.js
py2dmol/: __init__.py  viewer.py
py2dmol/resources/: __init__.py  pseudo_3D_viewer.html
tests/: test_viewer.py
verifications/: final_verification.py
web/: MAIN_README.md  app-esmfold.js  app.js  app.js.bak  app.min.js  style.css  utils.js  viewer-3dmol.js  viewer-scatter.js
