[project]
name = "py2Dmol"
version = "1.1.0"
description = "A Python library for visualizing protein structures in 2D."
authors = [{ name = "sokrypton", email = "so3@mit.edu" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BEER-WARE" }
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
dependencies = [
    "numpy",
    "ipython",
    "gemmi",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sokrypton/py2Dmol"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
py2Dmol = ["resources/pseudo_3D_viewer.html"]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
exclude = [".venv", "venv", "build", "dist", "__pycache__", "tests", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"PD",
"D203",
"D213",
]
pylint.max-args = 15

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
]

[tool.basedpyright]
reportMissingImports = none
