[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py2Dmol"
version = "1.1.4"
description = "A Python library for visualizing protein structures in 2D."
authors = [{ name = "sokrypton", email = "so3@mit.edu" }, { name = "maraxen"} ]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BEER-WARE" }
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
dependencies = [
    "numpy",
    "ipython",
    "gemmi",
    "ruff",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/sokrypton/py2Dmol"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
py2dmol = ["resources/pseudo_3D_viewer.html"]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
exclude = [".venv", "venv", "build", "dist", "__pycache__", "tests", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"PD",
"D203",
"D213",
"COM812",  # Conflicts with formatter
"ISC001",  # Conflicts with formatter
]
per-file-ignores = { "*.ipynb" = ["ERA001"] }
pylint.max-args = 15


[tool.basedpyright]
reportMissingImports = "none"
reportImportCycles = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportAny = "none"
exclude = ["tests", "example", ".venv", "venv", "build", "dist"]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pre-commit>=4.0.0",
]
tests = [
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
]
docs = [
    "myst-nb>=0.17.2",
    "myst-parser>=0.18.1",
    "sphinx>=5.3.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinx-book-theme>=1.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxext-rediraffe>=0.2.7",
]
